--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,10 +1,10 @@
 .footer {
 	background: #f2f4f5;
-	padding: 90px 0;
+	padding: 72px 0 108px 0;
 	&__inner {
 		display: flex;
 		flex-direction: column;
-		gap: 60px;
+		gap: 48px;
 	}
 
 	&__title {
@@ -69,6 +69,16 @@
 	@media (max-width: 650px) {
 		&__buttons {
 			flex-direction: column;
+		}
+	}
+	@media (max-width: 500px) {
+		padding-top: 64px;
+		padding-bottom: 72px;
+		&__inner {
+			gap: 32px;
+		}
+		&__buttons {
+			gap: 16px;
 		}
 	}
 }
