--- a/scss/_hold.scss
+++ b/scss/_hold.scss
@@ -1,6 +1,6 @@
 .hold {
 	padding-top: 90px;
-	margin-bottom: 120px;
+	margin-bottom: 108px;
 	padding-left: 20px;
 	padding-right: 20px;
 	&__inner {
@@ -42,5 +42,9 @@
 			font-size: 25px;
 			line-height: 35px;
 		}
+	}
+	@media (max-width: 500px) {
+		padding-top: 50px;
+		margin-bottom: 72px;
 	}
 }
