--- a/scss/_payment.scss
+++ b/scss/_payment.scss
@@ -1,6 +1,5 @@
 .payment {
-	// position: relative;
-	margin-bottom: 70px;
+	margin-bottom: 108px;
 	overflow: hidden;
 	&__inner {
 		background: #f2f4f5;
@@ -81,6 +80,8 @@
 	@media (max-width: 500px) {
 		padding-left: 0 !important;
 		padding-right: 0 !important;
+		padding-bottom: 100px;
+		margin-bottom: 72px;
 		&__inner {
 			padding-left: 20px;
 			padding-right: 20px;
@@ -89,6 +90,7 @@
 		&__title {
 			font-size: 38px;
 			line-height: 45px;
+			margin-bottom: 32px;
 		}
 		&__text {
 			p {
