--- a/scss/_ringblock.scss
+++ b/scss/_ringblock.scss
@@ -3,7 +3,7 @@
 	margin-top: 76.75px;
 	padding: 138px 0;
 	position: relative;
-	margin-bottom: 100px;
+	margin-bottom: 108px;
 	&__inner {
 		display: flex;
 		align-items: center;
@@ -61,7 +61,7 @@
 		}
 	}
 	@media (max-width: 500px) {
-		margin-bottom: 50px;
+		margin-bottom: 72px;
 		&__image {
 			max-width: 344px;
 		}
